# EcoIP

./: 1 - color_space_frequencies.py  1-color_space_frequencies.py  2 - make_probabilities_from_frequencies.py  2-make_probabilities_from_frequencies.py  3 - segment_based_on_probabilities.py  3-segment_based_on_probabilities.py  4 - gather_stats.py  4-gather_stats.py  5 - segment_sequence_with_1_mask_and_fore_probabilities.py  5-segment_sequence_with_1_mask_and_fore_probabilities.py  CMakeLists.txt  ColorConverter.py  README  TODO  avg_color_through_time_1mask.py  browse_files.py  color_space_probabilities.py
docs/: Makefile  bayesianModelDefinition.tex
docs/man/: EcoIP-package.Rd  ecoip_exec.Rd  ecoip_plot_exec.Rd  eip.genMiss.Rd  eip.genOutput.Rd  eip.get_50_dates.Rd  eip.histcmp.Rd  eip.nbm.Rd  eip.plot.Rd  eip.showModel.Rd  eip.show_sig.Rd  eip.sigmoid.Rd  eip.smooth.Rd  eip.version.Rd
samples/images/flowerte/: README
samples/images/flowertr/: 01.jpg.csv  02.jpg.csv  03.jpg.csv  04.jpg.csv  05.jpg.csv  06.jpg.csv  07.jpg.csv  08.jpg.csv  09.jpg.csv  10.jpg.csv  11.jpg.csv  12.jpg.csv
samples/images/testing/: README
samples/images/training/: 01.jpg.csv  03.jpg.csv  04.jpg.csv  05.jpg.csv  06.jpg.csv  07.jpg.csv  10.jpg.csv
samples/images/treetr/: 01.jpg.csv  02.jpg.csv  08.jpg.csv  09.jpg.csv  11.jpg.csv  12.jpg.csv  README
scripts-old/: 3-segment_based_on_probabilities.py  5-segment_sequence_with_1_mask_and_fore_probabilities.py  ColorConverter.py
src/R/: colorTrans.R  common.R  ecoaqc  ecoip  ecoip.R  ecoip_consolidate  ecoip_install.R  ecoip_plot  ecoip_plot.R  imageTrans.R  naiveBayes.R  tests.R
test/: run_test.R  test_cmd.R  test_color.R  test_mask.R  test_nbm.R
test/images/: 2009-01-01-img.jpg.csv  2009-01-02-img.jpg.csv
